Pagina final admin

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Proyecto de Investigación en Gestión - Entrevista a TKC Group Fumigaciones">
-    <meta name="author" content="Juan Bravo, Samuel Correa, David Dávila, Vicente Sánchez, María Zabala">
+    <meta name="author" content="Juan Bravo, Samuel Correa, David Dávila, María Zabala">
     <title>Proyecto TKC Group - Principios Administrativos de Mary Parker Follett</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -23,11 +23,17 @@
             </div>
             <ul id="navMenu">
                 <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#resumen">Resumen</a></li>
                 <li><a href="#proyecto">Proyecto</a></li>
                 <li><a href="#marco-teorico">Marco Teórico</a></li>
                 <li><a href="#empresa">Empresa</a></li>
+                <li><a href="#contexto-gerente">Contexto Gerente</a></li>
+                <li><a href="#flujo-situacion">Ley de la Situación</a></li>
+                <li><a href="#timeline">Línea de Tiempo</a></li>
                 <li><a href="#equipo">Equipo</a></li>
                 <li><a href="#entrevista">Entrevista</a></li>
+                <li><a href="#resultados">Resultados</a></li>
+                <li><a href="#conclusiones">Conclusiones</a></li>
             </ul>
         </nav>
     </header>
@@ -41,11 +47,32 @@
                 <p class="hero-subtitle">Análisis cualitativo mediante entrevista semiestructurada a la gerente Yesenia Morales Mora</p>
                 <div class="hero-buttons">
                     <a href="#proyecto" class="btn btn-primary">Ver Investigación</a>
-                    <a href="#entrevista" class="btn btn-secondary">Ver Entrevista</a>
+                    <a href="https://www.youtube.com/watch?v=-OjlI5Dz1kk&t=5s" target="_blank" rel="noopener" class="btn btn-secondary">Ver Entrevista</a>
                 </div>
             </div>
             <div class="hero-image">
                 <i class="fas fa-building-user"></i>
+            </div>
+        </section>
+
+        <!-- Resumen Section -->
+        <section id="resumen" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-file-alt"></i> Resumen del Estudio</h2>
+            </div>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Resumen</h3>
+                    <p>El estudio analiza cómo TKC Group integra los principios de Mary Parker Follett: "poder con" frente a "poder sobre", integración del conflicto, ley de la situación y proceso grupal. La gerencia de Yesenia Morales Mora aplica liderazgo colaborativo, autonomía responsable y decisiones basadas en hechos técnicos y normativos.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Hallazgos Clave</h3>
+                    <p>La autoridad se fundamenta en el análisis situacional; los conflictos se abordan de forma ganar-ganar; la capacitación y protocolos HSEQ refuerzan la autonomía; la retroalimentación con clientes sostiene la adaptación continua.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Palabras Clave</h3>
+                    <p><strong>Mary Parker Follett</strong>, liderazgo colaborativo, ley de la situación, integración del conflicto, proceso grupal, servicios ambientales, estudio cualitativo, TKC Group.</p>
+                </div>
             </div>
         </section>
 
@@ -75,7 +102,7 @@
             <div class="section-header">
                 <h2><i class="fas fa-book"></i> Marco Teórico: Principios de Mary Parker Follett</h2>
             </div>
-            <div class="theory-grid">
+            <div class="theory-grid four-grid">
                 <div class="theory-card">
                     <div class="theory-icon">
                         <i class="fas fa-handshake"></i>
@@ -149,12 +176,42 @@
             </div>
         </section>
 
+        <!-- Ley de la Situación Flow Section -->
+        <section id="flujo-situacion" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-diagram-project"></i> Flujo "Ley de la Situación"</h2>
+            </div>
+            <p style="max-width:800px;margin:0 auto 2rem auto;text-align:center;">Cada etapa desplaza la autoridad al análisis técnico y normativo de la situación, alineándose con la lógica de Mary Parker Follett. Haz clic en cada paso para ver su explicación.</p>
+            <div class="flow-steps" id="flowSteps">
+                <!-- Pasos generados dinámicamente -->
+            </div>
+            <div class="flow-detail" id="flowDetail" aria-live="polite">
+                <h3>Selecciona un paso del flujo</h3>
+                <p>Diagnóstico del sitio, riesgos y normativa, selección del método, verificación HSEQ & ejecución, retroalimentación con el cliente.</p>
+            </div>
+        </section>
+
+        <!-- Timeline Section -->
+        <section id="timeline" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-stream"></i> Línea de Tiempo TKC Group</h2>
+            </div>
+            <p style="max-width:800px;margin:0 auto 2rem auto;text-align:center;">Evolución histórica: origen (1969), formación (1989), experiencia (1994–2004), fundación (2004), consolidación (2004–2017), cambio de gerencia (2017), diversificación (2017–Actualidad) y liderazgo actual. Haz clic en cada hito para ver la descripción completa.</p>
+            <div class="timeline-container" id="timelineContainer" aria-label="Línea de tiempo interactiva">
+                <!-- Eventos generados dinámicamente -->
+            </div>
+            <div class="timeline-detail" id="timelineDetail" aria-live="polite">
+                <h3>Selecciona un hito</h3>
+                <p>Los hitos listados reflejan la trayectoria emprendedora, la maduración estructural y el liderazgo colaborativo contemporáneo.</p>
+            </div>
+        </section>
+
         <!-- Equipo Section -->
         <section id="equipo" class="section">
             <div class="section-header">
                 <h2><i class="fas fa-users"></i> Equipo de Investigación</h2>
             </div>
-            <div class="team-grid">
+            <div class="team-grid four-grid">
                 <div class="team-member">
                     <div class="member-avatar">
                         <i class="fas fa-user-graduate"></i>
@@ -178,14 +235,6 @@
                     <h3>David Dávila</h3>
                     <p class="member-role">Coordinador de Entrevistas</p>
                     <p class="member-desc">Diseño y aplicación de la entrevista semiestructurada a la gerente.</p>
-                </div>
-                <div class="team-member">
-                    <div class="member-avatar">
-                        <i class="fas fa-user-graduate"></i>
-                    </div>
-                    <h3>Vicente Sánchez</h3>
-                    <p class="member-role">Analista Teórico</p>
-                    <p class="member-desc">Desarrollo del marco conceptual y análisis de los principios de Follett.</p>
                 </div>
                 <div class="team-member">
                     <div class="member-avatar">
@@ -228,7 +277,7 @@
                 
                 <div class="interview-topics">
                     <h3>Bloques Temáticos de la Entrevista</h3>
-                    <div class="topics-grid">
+                    <div class="topics-grid four-grid">
                         <div class="topic-card">
                             <h4>Liderazgo y Ejercicio del Poder</h4>
                             <p>Exploración del "poder con" vs "poder sobre": estilo de liderazgo, distribución del poder, mecanismos de motivación y delegación de autoridad en TKC Group.</p>
@@ -285,6 +334,64 @@
                 </div>
             </div>
         </section>
+
+        <!-- Resultados Section -->
+        <section id="resultados" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-chart-bar"></i> Resultados del Análisis</h2>
+            </div>
+            <div class="project-grid four-grid">
+                <div class="project-card">
+                    <h3>Contexto Gerencial y Evolución</h3>
+                    <p>La transición de Liliana a Yesenia (2017) ocurre sobre una base ya formalizada (departamentos, procesos, perfiles), permitiendo que el enfoque humano y técnico de Yesenia potencie la expansión y diversificación sin perder control de estándares.</p>
+                </div>
+                <div class="project-card">
+                    <h3>“Poder con” en la Práctica</h3>
+                    <p>El liderazgo se centra en participación, escucha y autonomía responsable. Las decisiones se concertan y la motivación combina capacitación técnica, reconocimiento y espacios de diálogo, evitando imposiciones verticales.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Ley de la Situación</h3>
+                    <p>La autoridad deriva del análisis técnico: diagnósticos, normativa sanitaria-ambiental y experiencia del técnico prevalecen sobre jerarquía. Si un técnico señala riesgo, el servicio se ajusta o suspende.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Conflicto y Respuesta Circular</h3>
+                    <p>Los desacuerdos se tratan como oportunidades de mejora (comités operativos, mediación, retroalimentación cliente). La comunicación circular evita silos y refuerza coordinación transversal.</p>
+                </div>
+            </div>
+            <div class="follett-application" style="margin-top:2rem;">
+                <h3>Síntesis Analítica</h3>
+                <p>Los resultados evidencian aplicación consistente de los principios de Mary Parker Follett: el <strong>“poder con”</strong> fortalece cohesión; la <strong>ley de la situación</strong> legitima decisiones técnicas; la <strong>integración del conflicto</strong> reconvierte tensiones en aprendizaje; y la <strong>respuesta circular</strong> sostiene adaptación continua. Esta articulación permite a TKC balancear rigor regulatorio, servicio especializado y bienestar humano.</p>
+            </div>
+        </section>
+
+        <!-- Conclusiones Section -->
+        <section id="conclusiones" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-check-circle"></i> Conclusiones</h2>
+            </div>
+            <div class="project-grid four-grid">
+                <div class="project-card">
+                    <h3>Alineación con Follett</h3>
+                    <p>La gerencia de Yesenia encarna los principios de Follett: autoridad situada, colaboración y resolución integradora de conflictos sustentan un liderazgo participativo y adaptable.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Impacto en Desempeño</h3>
+                    <p>Ética, responsabilidad sostenible y ambiente laboral cómodo explican resultados positivos recientes: calidad de servicio, expansión y reconocimiento ambiental (PREAD).</p>
+                </div>
+                <div class="project-card">
+                    <h3>Validación Teórica</h3>
+                    <p>El caso funciona como evidencia empírica que refuerza la vigencia del pensamiento administrativo clásico aplicado a contextos contemporáneos regulados y técnicos.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Perspectiva Humana</h3>
+                    <p>La investigación destaca que gerentes y empleados aprenden de forma continua; la dimensión humana no se opone a la eficiencia sino que la potencia.</p>
+                </div>
+            </div>
+            <div class="follett-application" style="margin-top:2rem;">
+                <h3>Cierre Interpretativo</h3>
+                <p>TKC muestra que integrar análisis situacional, conocimiento técnico y empatía genera un modelo de gestión resiliente. La articulación de <strong>participación</strong>, <strong>retroalimentación circular</strong> y <strong>autoridad basada en hechos</strong> se posiciona como eje para sostener crecimiento responsable y aprendizaje organizacional continuo.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -295,7 +402,7 @@
             </div>
             <div class="footer-section">
                 <h4>Equipo Investigador</h4>
-                <p>Juan Bravo • Samuel Correa • David Dávila • Vicente Sánchez • María Zabala</p>
+                <p>Juan Bravo • Samuel Correa • David Dávila • María Zabala</p>
             </div>
             <div class="footer-section">
                 <h4>Universidad</h4>
