--- a/index.html
+++ b/index.html
@@ -24,13 +24,8 @@
             <ul id="navMenu">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#resumen">Resumen</a></li>
-                <li><a href="#proyecto">Proyecto</a></li>
-                <li><a href="#marco-teorico">Marco Teórico</a></li>
                 <li><a href="#empresa">Empresa</a></li>
                 <li><a href="#contexto-gerente">Contexto Gerente</a></li>
-                <li><a href="#flujo-situacion">Ley de la Situación</a></li>
-                <li><a href="#timeline">Línea de Tiempo</a></li>
-                <li><a href="#equipo">Equipo</a></li>
                 <li><a href="#entrevista">Entrevista</a></li>
                 <li><a href="#resultados">Resultados</a></li>
                 <li><a href="#conclusiones">Conclusiones</a></li>
@@ -189,6 +184,11 @@
                 <h3>Selecciona un paso del flujo</h3>
                 <p>Diagnóstico del sitio, riesgos y normativa, selección del método, verificación HSEQ & ejecución, retroalimentación con el cliente.</p>
             </div>
+            <div class="interview-actions" style="margin-top:2rem;">
+                <a href="https://colab.research.google.com/drive/1sAZjNzilAOlgaZQn6m_MlR38vyuNcDr8?usp=sharing" target="_blank" rel="noopener" class="btn btn-primary">
+                    <i class="fas fa-chart-line"></i> Ver Diagrama de Flujo
+                </a>
+            </div>
         </section>
 
         <!-- Timeline Section -->
@@ -328,8 +328,8 @@
                 </div>
 
                 <div class="interview-actions">
-                    <a href="https://colab.research.google.com/drive/1sAZjNzilAOlgaZQn6m_MlR38vyuNcDr8?usp=sharing" target="_blank" class="btn btn-primary">
-                        <i class="fas fa-chart-line"></i> Ver Diagrama de Flujo "Ley de la Situación"
+                    <a href="https://www.youtube.com/watch?v=-OjlI5Dz1kk&t=5s" target="_blank" rel="noopener" class="btn btn-secondary">
+                        <i class="fas fa-video"></i> Ver Entrevista
                     </a>
                 </div>
             </div>
