--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
             <ul id="navMenu">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#resumen">Resumen</a></li>
-                <li><a href="#empresa">Empresa</a></li>
                 <li><a href="#contexto-gerente">Contexto Gerente</a></li>
                 <li><a href="#entrevista">Entrevista</a></li>
                 <li><a href="#resultados">Resultados</a></li>
-                <li><a href="#conclusiones">Conclusiones</a></li>
             </ul>
         </nav>
     </header>
@@ -133,6 +131,31 @@
             </div>
         </section>
 
+        <!-- Metodología Section -->
+        <section id="metodologia" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-flask"></i> Metodología</h2>
+            </div>
+            <div class="project-grid four-grid">
+                <div class="project-card">
+                    <h3>Enfoque</h3>
+                    <p>Estudio cualitativo con <strong>estudio de caso instrumental</strong> (Stake, 1999) para comprender la aplicación práctica de los principios de Mary Parker Follett en TKC.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Estrategia</h3>
+                    <p>Entrevista <strong>semiestructurada</strong> a la gerente Yesenia Morales Mora como fuente principal, complementada con revisión de prácticas HSEQ y contexto operativo.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Instrumento</h3>
+                    <p>Guía organizada en bloques: Apertura/Consentimiento, Contexto, Núcleo (poder con, ley de la situación, integración del conflicto/proceso grupal) y Cierre.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Calidad del Dato</h3>
+                    <p>Preguntas abiertas y pertinentes, sondeos (¿por qué?, ¿cómo?, ¿ejemplo?) y coherencia entre objetivos, marco teórico y dimensiones de análisis aseguran validez y confiabilidad.</p>
+                </div>
+            </div>
+        </section>
+
         <!-- Empresa Section -->
         <section id="empresa" class="section">
             <div class="section-header">
@@ -168,6 +191,18 @@
                         <div class="stat-label">Sedes en Bogotá</div>
                     </div>
                 </div>
+            </div>
+            <div class="follett-application" style="margin-top:2rem;">
+                <h3>Clasificación Organizacional</h3>
+                <ul class="services-list">
+                    <li><i class="fas fa-briefcase"></i> <strong>Finalidad:</strong> Empresarial</li>
+                    <li><i class="fas fa-user-friends"></i> <strong>Tamaño:</strong> Mediana (directa) / Grande (con indirecta)</li>
+                    <li><i class="fas fa-layer-group"></i> <strong>Sector:</strong> Terciario (saneamiento, desinfección, lavado de tanques, control de plagas, extintores)</li>
+                    <li><i class="fas fa-balance-scale"></i> <strong>Forma jurídica:</strong> SAS</li>
+                    <li><i class="fas fa-industry"></i> <strong>Actividad:</strong> Servicios industriales</li>
+                    <li><i class="fas fa-map-marker-alt"></i> <strong>Ámbito:</strong> Nacional (2 sedes en Bogotá)</li>
+                    <li><i class="fas fa-lock"></i> <strong>Propiedad:</strong> Privada</li>
+                </ul>
             </div>
         </section>
 
@@ -331,6 +366,9 @@
                     <a href="https://www.youtube.com/watch?v=-OjlI5Dz1kk&t=5s" target="_blank" rel="noopener" class="btn btn-secondary">
                         <i class="fas fa-video"></i> Ver Entrevista
                     </a>
+                    <a href="entrevista.html" class="btn btn-primary" style="margin-left:0.5rem;">
+                        <i class="fas fa-file-lines"></i> Entrevista completa (Q&A)
+                    </a>
                 </div>
             </div>
         </section>
@@ -361,6 +399,26 @@
             <div class="follett-application" style="margin-top:2rem;">
                 <h3>Síntesis Analítica</h3>
                 <p>Los resultados evidencian aplicación consistente de los principios de Mary Parker Follett: el <strong>“poder con”</strong> fortalece cohesión; la <strong>ley de la situación</strong> legitima decisiones técnicas; la <strong>integración del conflicto</strong> reconvierte tensiones en aprendizaje; y la <strong>respuesta circular</strong> sostiene adaptación continua. Esta articulación permite a TKC balancear rigor regulatorio, servicio especializado y bienestar humano.</p>
+            </div>
+        </section>
+
+        <!-- Bibliografía Section -->
+        <section id="bibliografia" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-book-open"></i> Bibliografía</h2>
+            </div>
+            <div class="project-grid">
+                <div class="project-card">
+                    <h3>Referencias seleccionadas</h3>
+                    <ul class="services-list">
+                        <li><i class="fas fa-link"></i> Mendenhall, M. & Mendenhall, M. (2010). Voices from the past: Mary Parker Follett. <em>Journal of Management History</em>.</li>
+                        <li><i class="fas fa-link"></i> Peek, L. (2025). Mary Parker Follett theory. <em>Contemporary Management Review</em>.</li>
+                        <li><i class="fas fa-globe"></i> Secretaría Distrital de Ambiente (2024). <a href="https://ambientebogota.gov.co/web/sda/pread" target="_blank" rel="noopener">PREAD</a>.</li>
+                        <li><i class="fas fa-link"></i> Stake, R. E. (1999). <em>Investigación con estudio de casos</em>. Morata.</li>
+                        <li><i class="fas fa-globe"></i> TKC Group (2025). <a href="https://fumigacionestkc.com/" target="_blank" rel="noopener">Sitio oficial</a>.</li>
+                        <li><i class="fas fa-video"></i> Entrevista (2025). <a href="https://www.youtube.com/watch?v=-OjlI5Dz1kk" target="_blank" rel="noopener">YouTube</a>.</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
